--- a/src/app.html
+++ b/src/app.html
@@ -39,7 +39,7 @@
 				const prefersDarkTheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
 
 				if (!localStorage?.theme) {
-					localStorage.theme = 'system';
+					localStorage.theme = 'custom';
 				}
 
 				if (localStorage.theme === 'system') {
@@ -63,8 +63,7 @@
 					document.documentElement.classList.add('custom');
 					metaThemeColorTag.setAttribute('content', '#983724');
 				} else {
-					document.documentElement.classList.add('dark');
-					metaThemeColorTag.setAttribute('content', '#171717');
+					document.documentElement.classList.add('custom');
 				}
 
 				window.matchMedia('(prefers-color-scheme: dark)').addListener((e) => {
